force-app/main/default/objects/Accessory__c/Accessory__c.object-meta.xml
<CustomObject>
    <label>Accessory</label>
    <nameField>
        <label>Equipment Accessory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accessories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>