force-app/main/default/objects/Accessory__c/fields/Accessory_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Serial_Number__c</fullName>
    <label>Accessory Serial Number</label>
    <type>TextArea</type>
</CustomField>