force-app/main/default/objects/Accessory__c/fields/EA_Subcomponent_Id__c.field-meta.xml
<CustomField>
    <fullName>EA_Subcomponent_Id__c</fullName>
    <label>EA Subcomponent Id</label>
    <type>TextArea</type>
</CustomField>