force-app/main/default/objects/Accessory__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <referenceTo>TSGADX__Equipment__c</referenceTo>
    <relationshipLabel>Accessories</relationshipLabel>
    <relationshipName>Accessories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>