force-app/main/default/objects/Accessory__c/fields/Full_Equipment_Accessory_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Equipment_Accessory_Name__c</fullName>
    <description>Full Description Name EA</description>
    <label>Full Equipment Accessory Name</label>
    <type>TextArea</type>
</CustomField>